Modify checkout paths and move additional repo
Updated paths for repository checkouts and added a step to move the additional repo.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,14 +24,17 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout Main Repo
-        uses: actions/checkout@v4
-        with:
-          path: main
+        uses: actions/checkout@v4        
 
       - name: Checkout Aditional Repo
         uses: actions/checkout@v4
         with: 
-          path: test
+          path: additional-repositories/repo2
+
+      - name: Move additional repo to be a sibling of the main repo
+        run: |
+          PARENT="$(dirname "$GITHUB_WORKSPACE")"
+          mv "$GITHUB_WORKSPACE/additional-repositories/*" "$PARENT"          
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
