--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,10 +31,17 @@ jobs:
         with: 
           path: additional-repositories/repo2
 
+      - name: Tree Affter Checkout
+        run: |
+          tree $GITHUB_WORKSPACE/..
+
       - name: Move additional repo to be a sibling of the main repo
         run: |
-          PARENT="$(dirname "$GITHUB_WORKSPACE")"
-          mv "$GITHUB_WORKSPACE/additional-repositories/*" "$PARENT"          
+          mv "additional-repositories/*" ".."          
+
+      - name: Tree Affter Fix Locations
+        run: |
+          tree $GITHUB_WORKSPACE/..
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
@@ -46,9 +53,7 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
 
-      - name: Tree 1
-        run: |
-          tree $GITHUB_WORKSPACE
+     
 
       - name: Tree 2
         run: |
