Add echo command in test workflow
Add echo command to print current working directory before moving additional repositories.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,6 +37,7 @@ jobs:
 
       - name: Move additional repo to be a sibling of the main repo
         run: |
+          echo "${PWD}"
           mv "additional-repositories/*" ".."          
 
       - name: Tree Affter Fix Locations
