--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Checkout Aditional Repo
         uses: actions/checkout@v4
         with: 
-          path: additional-repositories/repo2
+          path: $GITHUB_WORKSPACE/repo2
 
       - name: Tree Affter Checkout
         run: |
