--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Checkout Aditional Repo
         uses: actions/checkout@v4
         with: 
-          path: ${{GITHUB_WORKSPACE}}/repo2
+          path: {{ github.workspace }}/repo2
 
       - name: Checkout Aditional Repo
         uses: actions/checkout@v4
